# fonetize

./: .gitignore  README.md  fonetize.py  pyproject.toml
core/: alphabet.py  rewriter.py
tests/: test_input.py
