[tool.poetry]
name = "fonetize"
version = "0.1.0"
description = "Fonetize is a simple CLI tool thats translates strings to phonetic alphabet"
authors = ["LarsVegasCPH <kool@stadigstiv.dk>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
